kernel/tests/ui/invalid_nan.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/invalid_nan.rs:4:5
  |
4 |     ImplPolylineConst::from_array([(0.0, f32::NAN), (1.0, 2.0)]);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation panicked: InvalidValue: NaN or infinite value in polyline
  |
note: inside `ImplPolylineConst::<2>::from_array`
 --> src/time_temperature_curve/impl_polyline_const.rs
  |
  |                 panic!("InvalidValue: NaN or infinite value in polyline");
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
